k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartcity
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: nocturnal-poison-trap
